--- a/WebApplicatie/templates/template.html
+++ b/WebApplicatie/templates/template.html
@@ -48,7 +48,7 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#">Home</a></li>
-						<li><a href="#">Uitloggen</a></li>
+						<li><a href="/logout/">Uitloggen</a></li>
           </ul>
 
         </div>
