--- a/WebApplicatie/templates/template.html
+++ b/WebApplicatie/templates/template.html
@@ -14,6 +14,7 @@
 
 		<!-- Custom styles for this template -->
 		<link href="{{ url_for('static', filename='css/cover.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/bootstrap-toggle.min.css') }}" rel="stylesheet">
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
@@ -26,6 +27,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap-toggle.min.js') }}"></script>
 
 <body id=system>
 
