--- a/WebApplicatie/templates/bewoner.html
+++ b/WebApplicatie/templates/bewoner.html
@@ -8,7 +8,7 @@
 				<div class="col-md-2"><span class="glyphicon glyphicon-user icongebruiker"></span></div>
 				<div class="col-md-10" style="margin-left: -40px;">
 					<span class="oranje"><h3>Welkom <span style="text-transform: capitalize;">{{ session['login'][0][3] }}!</span></h3></span>
-					<h4>Woning:</h4>
+					{% if heeftwoning==1 %}<h4>Woning: <span style="text-transform: capitalize;">{{ woning_info[0][1] }}</span></h4>{% endif %}
 
 				</div>
 		</div>
@@ -28,6 +28,8 @@
 		<div class="row">
 			<div class="col-md-6">
 
+					{% if heeftwoning==1 and heeftverlichting==1 %}
+
 					<div class="row">
 							<div class="col-md-3">
 
@@ -37,6 +39,17 @@
 							<div class="col-md-9 text-center">
 
 								<input id="verlichting-1" type="checkbox" data-toggle="toggle" data-onstyle="warning" data-on="Aan" data-off="Uit">
+								<script>
+								  $(function() {
+									$('#verlichting-1').change(function() {
+									  $.getJSON($SCRIPT_ROOT + '/bewoner/verlichting', {
+										a: $(this).prop('checked'),
+										b: 1
+									  });
+									  return false;
+									})
+								  })
+								</script>
 
 							</div>
 					</div>
@@ -52,6 +65,17 @@
 							<div class="col-md-9 text-center">
 
 								<input id="verlichting-2" type="checkbox" data-toggle="toggle" data-onstyle="warning" data-on="Aan" data-off="Uit">
+								<script>
+								  $(function() {
+									$('#verlichting-2').change(function() {
+									  $.getJSON($SCRIPT_ROOT + '/bewoner/verlichting', {
+										a: $(this).prop('checked'),
+										b: 2
+									  });
+									  return false;
+									})
+								  })
+								</script>
 
 							</div>
 					</div>
@@ -67,6 +91,17 @@
 							<div class="col-md-9 text-center">
 
 								<input id="verlichting-3" type="checkbox" data-toggle="toggle" data-onstyle="warning" data-on="Aan" data-off="Uit">
+								<script>
+								  $(function() {
+									$('#verlichting-3').change(function() {
+									  $.getJSON($SCRIPT_ROOT + '/bewoner/verlichting', {
+										a: $(this).prop('checked'),
+										b: 3
+									  });
+									  return false;
+									})
+								  })
+								</script>
 
 							</div>
 					</div>
@@ -76,9 +111,10 @@
 					    $('#verlichting-1').bootstrapToggle({% if light_info[0][3]==1 %}'on'{% else %}'off'{% endif %})
 					    $('#verlichting-2').bootstrapToggle({% if light_info[1][3]==1 %}'on'{% else %}'off'{% endif %})
 					    $('#verlichting-3').bootstrapToggle({% if light_info[2][3]==1 %}'on'{% else %}'off'{% endif %})
-						$('#verlichting-3').bootstrapToggle('disable')
 				 	</script>
 
+
+				{% else %}Error: '{% if heeftwoning==0 %}Geen woning ingesteld en {% else %}Geen {% endif %}verlichting is ingesteld.'{% endif %}
 
 		</div>
 		<div class="col-md-6 text-center">
