--- a/WebApplicatie/templates/bewoner.html
+++ b/WebApplicatie/templates/bewoner.html
@@ -17,6 +17,7 @@
 	</div>
 </div>
 
+
 <div class="container" style="margin-top: 25px;">
 	<div class="box2">
 
@@ -29,89 +30,36 @@
 			<div class="col-md-6">
 
 					{% if heeftwoning==1 and heeftverlichting==1 %}
+						{% for lamp in light_info %}
+									<div class="row" style="margin-top: 10px;">
+											<div class="col-md-3">
 
-					<div class="row">
-							<div class="col-md-3">
+													<h4 style="margin-top: 9px;text-transform: capitalize;">{{ light_info[loop.index0][2] }}:</h4>
 
-									<h4 style="margin-top: 9px;">Woonkamer:</h4>
+											</div>
+											<div class="col-md-9 text-center">
 
-							</div>
-							<div class="col-md-9 text-center">
+												<input id="verlichting-{{ loop.index0 }}" type="checkbox" data-toggle="toggle" data-onstyle="warning" data-on="Aan" data-off="Uit">
+												<script>
+												  $(function() {
+													$('#verlichting-{{ loop.index0 }}').change(function() {
+													  $.getJSON($SCRIPT_ROOT + '/bewoner/verlichting', {
+														a: $(this).prop('checked'),
+														b: {{ light_info[loop.index0][0] }}
+													  });
+													  return false;
+													})
+												  })
+												</script>
+												<script>
+													$('#verlichting-{{ loop.index0 }}').bootstrapToggle({% if light_info[loop.index0][3]==1 %}'on'{% else %}'off'{% endif %})
+												</script>
 
-								<input id="verlichting-1" type="checkbox" data-toggle="toggle" data-onstyle="warning" data-on="Aan" data-off="Uit">
-								<script>
-								  $(function() {
-									$('#verlichting-1').change(function() {
-									  $.getJSON($SCRIPT_ROOT + '/bewoner/verlichting', {
-										a: $(this).prop('checked'),
-										b: 1
-									  });
-									  return false;
-									})
-								  })
-								</script>
-
-							</div>
-					</div>
-
-
-
-					<div class="row" style="margin-top: 10px;">
-							<div class="col-md-3">
-
-									<h4 style="margin-top: 9px;">Keuken:</h4>
-
-							</div>
-							<div class="col-md-9 text-center">
-
-								<input id="verlichting-2" type="checkbox" data-toggle="toggle" data-onstyle="warning" data-on="Aan" data-off="Uit">
-								<script>
-								  $(function() {
-									$('#verlichting-2').change(function() {
-									  $.getJSON($SCRIPT_ROOT + '/bewoner/verlichting', {
-										a: $(this).prop('checked'),
-										b: 2
-									  });
-									  return false;
-									})
-								  })
-								</script>
-
-							</div>
-					</div>
+											</div>
+									</div>
+						{% endfor %}
 
 
-
-					<div class="row" style="margin-top: 10px;">
-							<div class="col-md-3">
-
-									<h4 style="margin-top: 9px;">Badkamer:</h4>
-
-							</div>
-							<div class="col-md-9 text-center">
-
-								<input id="verlichting-3" type="checkbox" data-toggle="toggle" data-onstyle="warning" data-on="Aan" data-off="Uit">
-								<script>
-								  $(function() {
-									$('#verlichting-3').change(function() {
-									  $.getJSON($SCRIPT_ROOT + '/bewoner/verlichting', {
-										a: $(this).prop('checked'),
-										b: 3
-									  });
-									  return false;
-									})
-								  })
-								</script>
-
-							</div>
-					</div>
-
-
-					<script>
-					    $('#verlichting-1').bootstrapToggle({% if light_info[0][3]==1 %}'on'{% else %}'off'{% endif %})
-					    $('#verlichting-2').bootstrapToggle({% if light_info[1][3]==1 %}'on'{% else %}'off'{% endif %})
-					    $('#verlichting-3').bootstrapToggle({% if light_info[2][3]==1 %}'on'{% else %}'off'{% endif %})
-				 	</script>
 
 
 				{% else %}Error: '{% if heeftwoning==0 %}Geen woning ingesteld en {% else %}Geen {% endif %}verlichting is ingesteld.'{% endif %}
