--- a/WebApplicatie/templates/admin.html
+++ b/WebApplicatie/templates/admin.html
@@ -17,9 +17,9 @@
 	      </span>
     	</div>
 
-			<button type="submit" class="btn btn-warning btn-lg smallborder" style="width: 100%;margin-top: 40px;">Lijst met gebruikers</button>
-			<button type="submit" class="btn btn-warning btn-lg smallborder" style="width: 100%;margin-top: 10px;">Lijst met woningen</button>
-
+			<a href="/admin/gebruikers/1/" type="button" class="btn btn-warning btn-lg smallborder" style="width: 100%;margin-top: 20px;">Lijst met gebruikers</a>
+			<a href="/admin/woningen/1/" type="button" class="btn btn-warning btn-lg smallborder" style="width: 100%;margin-top: 10px;">Lijst met woningen</a>
+			<a href="/admin/woningen/toevoegen/" type="button" class="btn btn-warning btn-lg smallborder" style="width: 100%;margin-top: 10px;">Woning toevoegen</a>
 
 		</div>
 	  <div class="col-md-6">
@@ -57,7 +57,7 @@
 
 						<div class="form-group text-right">
 								<div id="AnnulerenGroup" class="btn-group" role="group" aria-label="">
-									<button type="button" id="Annuleren" name="Annuleren" class="btn btn-default" aria-label="Annuleren">Annuleren</button>
+									<a href="/admin/" type="button" id="Annuleren" name="Annuleren" class="btn btn-default" aria-label="Annuleren">Annuleren</a>
 									<button type="submit" id="Aanmaken" name="Aanmaken" class="btn btn-warning" aria-label="Annuleren">Aanmaken</button>
 								</div>
 						</div>
