--- a/WebApplicatie/templates/meldkamer.html
+++ b/WebApplicatie/templates/meldkamer.html
@@ -70,7 +70,7 @@
 
 <div class="container" style="margin-top: 15px;">
 	<div class="box2">
-			<h3><span class="oranje">Servers:</span></h3>
+			<h3><span class="oranje">Systemen:</span></h3>
 			<p>De status van de domotica systemen zijn hieronder te zien.</p>
 			<div style="margin-top: 15px;">
 					{% for melding in server_uplist %}
