--- a/WebApplicatie/templates/meldkamer2.html
+++ b/WebApplicatie/templates/meldkamer2.html
@@ -71,21 +71,43 @@
 
 <div class="container" style="margin-top: 15px;">
 	<div class="box2">
-			<h3><span class="oranje">Servers:</span></h3>
+			<h3><span class="oranje">Systemen:</span></h3>
 			<div style="margin-top: 10px;">
 					{% for melding in server_uplist %}
 
 						{% if server_uplist[loop.index0][0] == 1 %}
 
-							<p class="bg-success">Woning_ID {{ server_uplist[loop.index0][2] }}, {{ server_uplist[loop.index0][1] }}.</p>
+							<p id="server-{{ loop.index0 }}"><span class="glyphicon glyphicon-ok online"></span><span class="bg-success check">Woning_ID {{ server_uplist[loop.index0][2] }}, {{ server_uplist[loop.index0][1] }}.</span></p>
 
 						{% else %}
 
-							<p class="bg-danger">Woning_ID {{ server_uplist[loop.index0][2] }}, {{ server_uplist[loop.index0][1] }}.</p>
+							<p id="server-{{ loop.index0 }}"><span class="glyphicon glyphicon-remove offline"></span><span class="bg-danger check">Woning_ID {{ server_uplist[loop.index0][2] }}, {{ server_uplist[loop.index0][1] }}.</span></p>
 
 						{% endif %}
 
 					{% endfor %}
+
+				<script>
+				window.setInterval(function(data){
+					$.getJSON($SCRIPT_ROOT + '/meldkamer/server_check', function(data){
+						var str = "";
+
+						for (i = 0; i < data.result.length; i++) {
+							if(data.result[i][0] == 1) {
+								$("#server-" + i).html("<span class=\"glyphicon glyphicon-ok online\"></span><span class=\"bg-success check\">Woning_ID " + data.result[i][2] + ", " + data.result[i][1] + "</span>");
+							}
+							else {
+								$("#server-" + i).html("<span class=\"glyphicon glyphicon-remove offline\"></span><span class=\"bg-danger check\">Woning_ID " + data.result[i][2] + ", " + data.result[i][1] + "</span>");
+							}
+
+
+						}
+
+
+						});
+				}, 5000);
+
+				</script>
 			</div>
 
 	</div>
